# spindown-daemon

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/spindown_daemon/: ata.rs  errors.rs  mod.rs  sysfs.rs
