[package]
name = "spindown-daemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
nix = "0.20.0"
log = "0.4.14"
stderrlog = "0.5.1"

[profile.release]
opt-level = 's'
lto = true